fix wrapping

--- a/style.css
+++ b/style.css
@@ -56,8 +56,9 @@ h2 {
 }
 
 .quote {
-    margin: 100px 450px;
     width: 800px;
+    padding: 100px;
+    flex: 0 0 auto;
 }
 
 .text {
@@ -70,6 +71,7 @@ h2 {
     text-align: end;
     font-size: 26px;
     font-weight: bold;
+    margin-right: 30px;
 }
 
 .quote>p,
@@ -81,7 +83,8 @@ h2 {
     display: flex;
     align-items: baseline;
     justify-content: space-between;
-    margin: 18px 450px;
+    width: 1000px;
+    align-self: center;
 }
 
 a {
@@ -105,8 +108,10 @@ ul {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 20px;
-    margin: 100px 450px;
+    width: 1000px;
+    align-self: center;
+    padding: 100px;
+    flex-wrap: wrap;
 }
 
 .main-text {
@@ -140,8 +145,9 @@ p {
 }
 
 .info {
-    padding: 0;
-    margin: 30px 450px 100px;
+    padding: 100px;
+    width: 1000px;
+    align-self: center;
     text-align: center;
 }
 
@@ -172,13 +178,21 @@ img {
     object-fit: cover;
 }
 
+.bottom-section {
+    display: flex;
+    justify-content: center;
+    padding: 100px;
+}
+
 .bottom {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin: 100px 450px;
+    width: 1000px;
     border-radius: 10px;
     padding: 50px 0;
+    align-self: center;
+    flex: 0 0 auto;
 }
 
 h3 {
